--- a/Front-end/ChartTest.html
+++ b/Front-end/ChartTest.html
@@ -19,10 +19,10 @@
 			type: 'line',
 			data: {
 				xLabels: ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
-				yLabels: ['', 'Request Added', 'Request Viewed', 'Request Accepted', 'Request Solved', 'Solving Confirmed'].reverse(),
+				yLabels: ['Request Added', 'Request Viewed', 'Request Accepted', 'Request Solved', 'Solving Confirmed'],
 				datasets: [{
 					label: 'My First dataset',
-					data: ['', 'Request Added', 'Request Added', 'Request Added', 'Request Viewed', 'Request Viewed', 'Request Viewed'],
+					data: ['Request Added', 'Request Added', 'Request Added', 'Request Viewed', 'Request Viewed', 'Request Viewed'],
 					fill: false,
 					borderColor: "rgba(255, 0, 0, 0.4)",
 					backgroundColor: "rgba(255, 0, 0, 0.4)"
