--- a/Front-end/lineChart.html
+++ b/Front-end/lineChart.html
@@ -24,7 +24,7 @@
 			<br>
 
 			<!--Allows user to select month specificatons for the graph up to 5 years ago-->
-			<p>Show records from the past <input type = "number" id = "months" name = "months" required value = "12" ng-model = "months" min = "1" max = "60"> months (default is 12)</p>
+			<p>Show records from the past <input type = "number" id = "months" name = "months" required value = "12" ng-model = "months" min = "1" max = "60"> months to the past <input type = "number" id = "months" name = "months" required value = "12" ng-model = "months2" min = "1" max = "60"> months</p>
 
 			<!--Allows user to select which specific repetitions to display-->
 			<p>Included repetitions: 
@@ -36,8 +36,10 @@
 
 			<!--Error message in case no data is retrieved-->
 			<h6 ng-show="errorMessage" style = "color:red;">Error: No data found</h6>
+			<br>
 
 			<!--HTML element for the generated chart-->
+			<img id = "logo" src = "img/gideon-logo.jpg" height = "60" width = "160" ng-hide="errorMessage">
 			<canvas id = "lineChart" ng-hide="errorMessage"></canvas>
 		</div>
 	</body>
