--- a/Front-end/StudentList.html
+++ b/Front-end/StudentList.html
@@ -20,6 +20,7 @@
 	</head>
 	<body>
 		<!--Selection buttons in the header to move to insert and update pages-->
+		<button type = "button" id = "studentBtn" onclick = "location.href='InsertStudent.html'">Insert Student</button>
 		<button type = "button" id = "insertBtn" onclick = "location.href='InsertRecord.html'">Insert Record</button>
 		<button type = "button" id = "updateBtn" onclick = "location.href='UpdateRecord.html'">Update Record</button>
 		<br/>
