--- a/Front-end/lineChart.html
+++ b/Front-end/lineChart.html
@@ -32,7 +32,7 @@
 			<br>
 
 			<!--Allows user to select month specificatons for the graph up to 5 years ago-->
-			<p>Show records from the past <input type = "number" id = "months" name = "months" required value = "12" ng-model = "months" min = "1" max = "60"> months to the past <input type = "number" id = "months" name = "months" required value = "12" ng-model = "months2" min = "1" max = "60"> months</p>
+			<p>Show records from the past <input type = "number" id = "months" name = "months" value = "12" ng-model = "months" min = "1" max = "60" required>months to the past <input type = "number" id = "months" name = "months" value = "12" ng-model = "months2" min = "1" max = "60" required> months</p>
 
 			<!--Allows user to select which specific repetitions to display-->
 			<p>Included repetitions: 
