--- a/Front-end/InsertRecord.html
+++ b/Front-end/InsertRecord.html
@@ -5,6 +5,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
 		<link rel = "stylesheet" type = "text/css" href="RecordStyle.css">
+		<link rel = "stylesheet" type = "text/css" href="siteStyle.css">
 
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -24,7 +25,7 @@
 		<link rel="icon" href="/img/favicon.ico" type="image/x-icon">
 	</head>
 	<body>
-		<div ng-app = "insertApp" ng-controller = "insertCtrl">
+		<div class = "exterior" ng-app = "insertApp" ng-controller = "insertCtrl">
 			<h1>Insert Record</h1>
 			<!--Form used for adding a new record for an existing student into the database-->
 		<form name = "insertForm">
@@ -59,10 +60,10 @@
 
 			<!--Simple number picker for instructors to enter the repetition number-->
 			<label for = "reps" id = "reps">Repetition</label>
-				<input type = "number" name = "reps" min = "1" max = "5" ng-model = "rep" required>
+				<input type = "number" name = "reps" min = "1" max = "5" ng-model = "rep" required><br><br>
 			
 			<!--Submit button: runs the insertTask function-->
-			<input type = "submit" value = "Submit" class = "button" ng-click = "createRecord()">
+			<button ng-click = "createRecord()">Submit</button>
 		</form>
 	</div>
 	</body>
