--- a/Front-end/lineChart.html
+++ b/Front-end/lineChart.html
@@ -22,6 +22,7 @@
 		<link rel = "stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 		<link rel = "stylesheet" type = "text/css" href="lineChart.css">
 		<link rel = "stylesheet" type = "text/css" href="siteStyle.css">
+		<script src = "ripple.js"></script>
 	</head>
 	<body>
 		<br>
