--- a/Front-end/EditStudent.html
+++ b/Front-end/EditStudent.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
 		<link rel = "stylesheet" type = "text/css" href="RecordStyle.css">
 		<link rel = "stylesheet" type = "text/css" href="siteStyle.css">
+		<script src = "ripple.js"></script>
 
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
