--- a/Front-end/UpdateRecord.html
+++ b/Front-end/UpdateRecord.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
 		<link rel = "stylesheet" type = "text/css" href="RecordStyle.css">
 		<link rel = "stylesheet" type = "text/css" href="siteStyle.css">
+		<script src = "ripple.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
@@ -39,14 +40,14 @@
 						<input type = "date" name = "endDate" id = "dateSelect" ng-model = "endDate"><br><br>
 
 						<!--Simple number picker for instructors to enter the test time-->
-						<div style="float:left">
-							<label for = "testTime" id = "testTime">Test Time</label>
+						<div id = "testTime">
+							<label for = "testTime">Test Time</label>
 							<input type = "number" name = "testTime" min = "0" max = "1000" ng-model = "testTime">
 						</div>
 
 						<!--Simple number picker for instructors to enter the number of mistakes-->	
-						<div style="float:left">
-							<label for = "mistakes" id = "mistakes">Mistakes</label>
+						<div id = "mistakes">
+							<label for = "mistakes">Mistakes</label>
 							<input type = "number" name = "mistakes" min = "0" max = "1000" ng-model = "mistakes">
 						</div>
 						<br><br><br>
